[gd_scene load_steps=2 format=3 uid="uid://fkabno35gmia"]

[ext_resource type="Script" path="res://ui/tutorial_ui/tutorial_ui.gd" id="1_3jiys"]

[node name="Tutorial_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3jiys")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.196078)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.5
offset_top = -280.0
offset_right = 504.5
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Pose" type="TextureRect" parent="Panel/VBoxContainer"]
layout_mode = 2
stretch_mode = 3

[node name="PoseText" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
